[tool.poetry]
name = "nonebot_plugin_hammer_nbnhhsh"
version = "1.0.0"
description = "a nonebot2 plugin to request \"nbnhhsh\" api for qq group"
authors = ["ArgonarioD <739062975@qq.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://docs.hammer-hfut.tk:233"
repository = "https://github.com/ArgonarioD/nonebot-plugin-hammer-nbnhhsh"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9"
]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
nonebot-plugin-hammer-core = "^0.1.1"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
